TINKERPOP-2076 Bumped surefire/failsafe plugin versions.
Seems like there are some problems with these plugins and jdk11. Not sure why it wasn't an issue before the last day or so.